--- a/T2/.vscode/settings.json
+++ b/T2/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "time_value.h": "c"
+        "time_value.h": "c",
+        "gmain.h": "c",
+        "stdio.h": "c"
     }
 }
